reduce usage of Guava